2015-06-25  Joseph Myers  <joseph@codesourcery.com>

	[BZ #16559]
	[BZ #18602]
	* sysdeps/ieee754/dbl-64/e_jn.c (__ieee754_jn): Set
	round-to-nearest internally then recompute results that
	underflowed to zero in the original rounding mode.
	* sysdeps/ieee754/flt-32/e_jnf.c (__ieee754_jnf): Likewise.
	* sysdeps/ieee754/ldbl-128/e_jnl.c (__ieee754_jnl): Likewise.
	* sysdeps/ieee754/ldbl-128ibm/e_jnl.c (__ieee754_jnl): Likewise.
	* sysdeps/ieee754/ldbl-96/e_jnl.c (__ieee754_jnl): Likewise
	* math/libm-test.inc (jn_test): Use ALL_RM_TEST.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2015-06-25  Andrew Senkevich  <andrew.senkevich@intel.com>

	* NEWS: Fixed description of link with vector math library.

2015-06-25  Andreas Schwab  <schwab@suse.de>

	[BZ #18549]
	* libio/fmemopen.c (fmemopen_write): Fix bounds check for ENOSPC.
	* libio/test-fmemopen.c (do_test): Add test for it.

2015-06-25  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #17841]
	* Makeconfig (no-pie-ldflag): New.
	(+link): Set to $(+link-pie) if default to PIE.
	(+link-tests): Set to $(+link-pie-tests) if default to PIE.
	* config.make.in (build-pie-default): New.
	* configure.ac (libc_cv_pie_default): New.  Set to yes if -fPIE
	is default.  AC_SUBST.
	* configure: Regenerated.
	* elf/Makefile (LDFLAGS-tst-dlopen-aout): New.

2015-06-24  Roland McGrath  <roland@hack.frob.com>

	* nptl/descr.h (struct pthread): Change type of field setxid_futex
	to 'unsigned int'.

	* resolv/gai_misc.h (struct waitlist): Change type of field
	counterp to 'volatile unsigned int *'.
	* sysdeps/nptl/gai_misc.h (GAI_MISC_WAIT): Use unsigned types for
	FUTEXADDR and OLDVAL.
	* resolv/getaddrinfo_a.c (getaddrinfo_a):
	Give local variable TOTAL type 'volatile unsigned int'.
	(struct async_waitlist): Change type of field counter to 'unsigned int'.
	* resolv/gai_suspend.c (gai_suspend):
	Give local variable CNTR type 'unsigned int'.
